# thought-tracer

./: .gitignore  FORMULAS.md  LICENSE  README.md  pyproject.toml  run_enhanced.py  test_app.py
src/logitlens_tui/: __init__.py  __main__.py  app.py  enhanced_app.py  lens.py  modeling.py
tests/: test_core.py
